--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
+:root {
+  --color-white: #f4f4f4; 
+  --color--dark: #333;
+  --color--black: #000;
+  --color--blue: #568c9b;
+  --color--blue--hover: #0E4E5B;
+  --color--warning: #9E0505;
+  --box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.7);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  min-height: 100vh;
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  margin: 0;
+  color: var(--color--black);
+  background: var(--color-white);
 }
+
