--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-  --color-white: #f1f1f1; 
+  --color--white: #f1f1f1; 
   --color--dark: #333;
   --color--black: #000;
   --color--blue: #568c9b;
@@ -14,8 +20,18 @@ body {
   min-height: 100vh;
   font-family: "Lato", sans-serif;
   font-size: 18px;
-  margin: 0;
   color: var(--color--black);
-  background: var(--color-white);
+  background: var(--color--white);
 }
 
+/* Header */
+header {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 6rem;
+}
