--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 :root {
@@ -16,22 +14,42 @@
   --box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.7);
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  min-height: 100%;
   font-family: "Lato", sans-serif;
   font-size: 18px;
   color: var(--color--black);
   background: var(--color--white);
 }
+#root {
+  height: 100%;
+  min-height: 100%;
+}
 
 /* Header */
 header {
-  display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  z-index: 999;
   width: 100%;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 6rem;
 }
+
+/* Main */
+main {
+  padding-top: 5rem;
+}
+
+
