--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --color--white: #f1f1f1; 
+  --color--white: #fcfcfc; 
   --color--dark: #333;
   --color--black: #000;
   --color--blue: #568c9b;
@@ -37,19 +37,40 @@ body {
 header {
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 999;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 6rem;
+  padding: 2rem 6rem;
+  outline: 1px solid red;
 }
-
 /* Main */
 main {
-  padding-top: 5rem;
+  padding-top: 6rem;
+  min-height: 100vw;
+  display: flex;
+  align-items: flex-start;
+  outline: 3px solid green;
 }
+
+/* Dashboard */
+.dashboard {
+  padding: 2rem;
+  margin-left: auto;
+  outline: 1px solid black;
+}
+
+/* Display */
+.display {
+  padding: 2rem;
+  margin-right: auto;
+  outline: 1px solid black;
+}
+@media only screen and (1000px) {
+}
+
+
+
 
 
