--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,8 @@
 
 *, *::before, *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 :root {
@@ -56,6 +58,7 @@ main {
 
 /* Dashboard */
 .dashboard {
+  width: 400px;
   padding: 2rem;
   margin-left: auto;
   outline: 1px solid black;
@@ -64,15 +67,18 @@ main {
 /* Display */
 .display {
   padding: 2rem;
+  margin-left: 3rem;
   margin-right: auto;
   outline: 1px solid black;
 }
-@media only screen and (1000px) {
-}
+
 
 .course {
+  padding: 1.5rem;
+  width: 500px;
   border: 1px solid blue;
 }
 
 
-
+@media only screen and (1000px) {
+}
