--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,6 +66,7 @@ main {
 
 /* Display */
 .display {
+  width: 500px;
   padding: 2rem;
   margin-left: 3rem;
   margin-right: auto;
@@ -75,10 +76,23 @@ main {
 
 .course {
   padding: 1.5rem;
-  width: 500px;
   border: 1px solid blue;
 }
 
+.Loader::after {
+  content: "\2026";
+  font-size: 1.5rem;
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: bottom;
+  animation: loader steps(4, end) 2s infinite;
+  width: 0px;
+}
+@keyframes loader {
+  to {
+    width: 1.25em;
+  }
+}
 
 @media only screen and (1000px) {
 }
