--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,6 +93,10 @@ main {
   border: 1px solid blue;
 }
 
+.course + .course {
+  margin-top: 1rem;
+}
+
 .Loader::after {
   content: "\2026";
   font-size: 1.5rem;
@@ -107,6 +111,5 @@ main {
     width: 1.25em;
   }
 }
-
 @media only screen and (1000px) {
 }
