--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,12 +104,14 @@ main {
   overflow: hidden;
   vertical-align: bottom;
   animation: loader steps(4, end) 2s infinite;
-  width: 0px;
+  width: 0;
+  margin-left: 3px;
 }
 @keyframes loader {
   to {
-    width: 1.25em;
+    width: 1.1em;
   }
 }
+
 @media only screen and (1000px) {
 }
