--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,11 @@ body {
   height: 100%;
   min-height: 100%;
 }
+.errors {
+  font-size: 15px;
+  color: red;
+  margin: .5rem 0 2rem;
+}
 
 /* Header */
 header {
