--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,8 +18,8 @@
 
 html {
   height: 100%;
+  min-height: 100%;
 }
-
 body {
   display: flex;
   flex-direction: column;
@@ -30,9 +30,20 @@ body {
   color: var(--color--black);
   background: var(--color--white);
 }
-#root {
-  height: 100%;
-  min-height: 100%;
+button, .button {
+  background-color: var(--color--white);
+  color: var(--color--black);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  border: 1px solid var(--color--black);
+  transition: all 0.3s;
+  cursor: pointer;
+  padding: .5rem 1rem;
+}
+button:hover, 
+.button:hover {
+  color: var(--color--white);
+  background-color: var(--color--dark);
 }
 .errors {
   font-size: 15px;
@@ -133,4 +144,10 @@ main {
 }
 
 @media only screen and (1000px) {
+}
+
+
+.logBreak {
+  position: relative;
+  bottom: -17rem;
 }
