--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,10 +111,12 @@ main {
   padding: 2rem;
   margin-left: 33rem;
   outline: 1px solid black;
+  background-color: #eee;
 }
 .course {
   padding: 1.5rem;
-  border: 1px solid blue;
+  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.05);
+  background-color: #fcfcfc;
 }
 .button-box {
   display: flex;
