--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  min-height: 100%;
+  min-height: 100vw;
   font-family: "Lato", sans-serif;
   font-size: 18px;
   color: var(--color--black);
@@ -79,14 +79,12 @@ main {
   min-height: 100vw;
   display: flex;
   align-items: flex-start;
+  justify-content: space-evenly;
   outline: 3px solid green;
 }
 
 /* Dashboard */
 .dashboard {
-  position: fixed;
-  top: 6rem;
-  left: 3rem;
   width: 400px;
   padding: 2rem;
   outline: 1px solid black;
@@ -116,7 +114,6 @@ main {
 .display {
   width: 500px;
   padding: 2rem;
-  margin-left: 33rem;
   outline: 1px solid black;
   background-color: #eee;
 }
