--- a/client/src/index.css
+++ b/client/src/index.css
@@ -136,7 +136,7 @@ main {
   top: 0;
   right: 0;
   font-weight: bold;
-  width: 220px;
+  width: 214px;
   height: 80px;
   border-radius: 6px;
   text-align: center;
@@ -162,6 +162,10 @@ main {
 }
 .addSessionFormField {
   text-align: center;
+  font-size: 16px;
+}
+.addSessionFormField .button {
+  padding: 6px 12px;
 }
 
 /* Display */
