added pencil icon to session entries in CourseEventCard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,10 @@ button[disabled]:hover {
   opacity: 0.4;
   cursor: not-allowed;
 }
+.icon {
+  width: 25px;
+  height: 25px;
+}
 .hidden {
   display: none;
 }
