--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,8 +56,10 @@ button[disabled]:hover {
   cursor: not-allowed;
 }
 .icon {
-  width: 25px;
-  height: 25px;
+  width: 16px;
+  height: 16px;
+  margin-left: 14px;
+  cursor: pointer;
 }
 .hidden {
   display: none;
